sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:15: error: not found: type Bollean
  var finished:Bollean = false
               ^